--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -50,7 +50,9 @@ https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 ### 五，挂在服务器文件到开发板的mnt目录下
 
-> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768                       	192.168.0.117:/home/caizhi/Hi3559A/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/ /mnt*`
+> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.102:/home
+/winston/Hi3559AV100/Hi3559AV100R001C02SPC020/01.software/board/Hi3559AV100_SDK_
+V2.0.2.0/ /mnt 
 
 ### 六，运行MPP业务
 
