--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -50,8 +50,7 @@ https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 ### 五，挂在服务器文件到开发板的mnt目录下
 
-> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.102:/home
-/winston/Hi3559AV100/Hi3559AV100R001C02SPC020/01.software/board/Hi3559AV100_SDK_
+> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.102:/home/winston/Hi3559AV100/Hi3559AV100R001C02SPC020/01.software/board/Hi3559AV100_SDK_
 V2.0.2.0/ /mnt 
 
 ### 六，运行MPP业务
