--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -37,15 +37,33 @@
 > *setenv bootcmd 'nand read 0x45000000 0x2A00000 0x1000000;go_a53up 0x45000000; config_m7; nand read 0x52000000 0x3a00000 0x10000; cp.b 0x52000000 0x19000000 0x100000; go_m7; nand read 0x5200000 0x100000 0x900000;bootm 0x52000000';sa*
 
 ### 三，Ubuntu 16.04系统上NFS的安装与使用
-
+可参考以下链接进行NFS的安装：
 https://blog.csdn.net/boling_cavalry/article/details/79498346
+
+1. 赋予读写权限，创建(非必须) /home/winston/Hi3559AV100 目录
+chmod a+rw /home/winston/Hi3559AV100
+注意： 该路径是用来挂载到开发版上的，因此把需要挂载的路径赋予读写权限即可
+
+2. 安装nfs服务器(服务器被客户端访问)
+sudo apt-get update
+sudo apt install nfs-kernel-server
+
+3.赋予挂载权限，打开 /etc/exports，加入下列内容(内容需修改)
+/home/winston/Hi3559AV100 *(rw,sync,no_subtree_check,no_root_squash) 或
+/home/winston/Hi3559AV100 *(rw,sync，no_root_squash)
+*表示任何IP都可以访问，rw是读写权限，sync是同步权限，no_subtree_check表示不用管父目录是否有权限，no_root_squash表示不用
+
+4. 重启NFS服务
+sudo /etc/init.d/nfs-kernel-server restart
 
 ### 四，用NFS挂在文件时网络通信设置
 
 在Linux下的终端下输入下面的命令
 
 > *ifconfig eth0 hw ether FA:5A:E1:B1:89:75*           //设置开发板以太网物理地址
+
 > *ifconfig eth0 192.168.0.101 netmask 255.255.255.0*  //设置开发板ip和掩码，需要和烧写时的配置相同
+
 > *route add default gw 192.168.0.1*                //设置网关，用于服务器和开发板处于不同网段时的相互通信
 
 ### 五，挂在服务器文件到开发板的mnt目录下
