--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -60,16 +60,15 @@ sudo /etc/init.d/nfs-kernel-server restart
 
 在Linux下的终端下输入下面的命令
 
-> *ifconfig eth0 hw ether FA:5A:E1:B1:89:75*           //设置开发板以太网物理地址
+> ifconfig eth0 hw ether FA:5A:E1:B1:89:75          //设置开发板以太网物理地址
 
-> *ifconfig eth0 192.168.0.101 netmask 255.255.255.0*  //设置开发板ip和掩码，需要和烧写时的配置相同
+> ifconfig eth0 192.168.0.103 netmask 255.255.255.0  //设置开发板ip和掩码，需要和烧写时的配置相同
 
-> *route add default gw 192.168.0.1*                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+> route add default gw 192.168.0.1                //设置网关，用于服务器和开发板处于不同网段时的相互通信
 
 ### 五，挂在服务器文件到开发板的mnt目录下
 
-> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.102:/home/winston/Hi3559AV100/Hi3559AV100R001C02SPC020/01.software/board/Hi3559AV100_SDK_
-V2.0.2.0/ /mnt 
+> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC020/01.software/board/Hi3559AV100_SDK_V2.0.2.0/ /mnt 
 
 ### 六，运行MPP业务
 
