添加一些调试问题

--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -6,7 +6,9 @@
 
 3.对于镜像文件的制作，可以直接到osdrv下直接使用make命令编译，也可单独编译。例如到osdrv/pub/pc目录下去用下面的命令来制作yaffs2格式的系统镜像（Hi3559AV100支持yaffs2格式的文件系统）
 
-*./mkyaffs2image100 <根文件系统所在地址> <生成镜像文件名> <Pagesize><ECC>*
+```
+./mkyaffs2image100 <根文件系统所在地址> <生成镜像文件名> <Pagesize><ECC>
+```
 
 4.另外我们可以直接利用NFS挂载文件来进行相应的开发。对于文件系统我们可以在挂载后直接由cp（复制命令）来添	加相关的文件。
 
@@ -14,13 +16,15 @@
 
 1.单linux系统（multi-core）
 
+> ```
 > setenv bootargs 'mem=512M console=ttyAMA0,115200 root=/dev/mtdblock2 rw rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),16M(rootfs)'
->
+> 
 > 注：mtdparts=hinand表示为Nand Flash，mtdparts=hi_sfc表示为SPI NAND FLASH
->
+> 
 > *setenv bootcmd 'nand read 0x44000000 0x100000 0x900000;bootm 0x44000000'*
->
+> 
 > *saveenv*
+> ```
 >
 > 注释：<OS内存分配><设备串口号，波特率><第几个分区块><文件系统格式><dlash类型>
 >
@@ -30,54 +34,296 @@
 
 2.双系统（big-little）
 
+> ```
 > setenv bootargs 'mem=512M console=ttyAMA0,115200 clk_ignore_unused rw root=/dev/mtdblock2 rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),32M(rootfs)';sa*
 > (1)不启动M7
 > *setenv bootcmd 'nand read 0x45000000 0x2A00000 0x1000000;go_a53up 0x45000000; nand read 0x52000000 0x100000 0x900000;bootm 0x52000000';sa*
 > (2)启动M7
 > *setenv bootcmd 'nand read 0x45000000 0x2A00000 0x1000000;go_a53up 0x45000000; config_m7; nand read 0x52000000 0x3a00000 0x10000; cp.b 0x52000000 0x19000000 0x100000; go_m7; nand read 0x5200000 0x100000 0x900000;bootm 0x52000000';sa*
+> ```
+>
+> 
 
 ### 三，Ubuntu 16.04系统上NFS的安装与使用
 可参考以下链接进行NFS的安装：
 https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 1. 赋予读写权限，创建(非必须) /home/winston/Hi3559AV100 目录
-chmod a+rw /home/winston/Hi3559AV100
-注意： 该路径是用来挂载到开发版上的，因此把需要挂载的路径赋予读写权限即可
+
+  ```
+  chmod a+rw /home/winston/Hi3559AV100
+  ```
+
+  注意： 该路径是用来挂载到开发版上的，因此把需要挂载的路径赋予读写权限即可
+
+  注意： 该路径是用来挂载到开发版上的，因此把需要挂载的路径赋予读写权限即可
 
 2. 安装nfs服务器(服务器被客户端访问)
-sudo apt-get update
-sudo apt install nfs-kernel-server
+
+  ```
+  sudo apt-get update
+  sudo apt install nfs-kernel-server
+  ```
+
+  
 
 3. 赋予挂载权限，打开 /etc/exports，加入下列内容(内容需修改)
-/home/winston/Hi3559AV100 *(rw,sync,no_subtree_check,no_root_squash) 或
-/home/winston/Hi3559AV100 *(rw,sync，no_root_squash)
-*表示任何IP都可以访问，rw是读写权限，sync是同步权限，no_subtree_check表示不用管父目录是否有权限，no_root_squash表示不用
+
+  ```
+  /home/winston/Hi3559AV100 *(rw,sync,no_subtree_check,no_root_squash) 或
+  /home/winston/Hi3559AV100 *(rw,sync，no_root_squash)
+  *表示任何IP都可以访问，rw是读写权限，sync是同步权限，no_subtree_check表示不用管父目录是否有权限，no_root_squash表示不用
+  ```
 
 4. 重启NFS服务
-sudo /etc/init.d/nfs-kernel-server restart
+
+  ```
+  sudo /etc/init.d/nfs-kernel-server restart
+  ```
 
 ### 四，用NFS挂在文件时网络通信设置
 
 在Linux下的终端下输入下面的命令
 
-> ifconfig eth0 hw ether FA:5A:E1:B1:89:75          //设置开发板以太网物理地址
+```
+ifconfig eth0 hw ether FA:5A:E1:B1:89:75          //设置开发板以太网物理地址
 
-> ifconfig eth0 192.168.0.103 netmask 255.255.255.0  //设置开发板ip和掩码，需要和烧写时的配置相同
+ifconfig eth0 192.168.0.103 netmask 255.255.255.0  //设置开发板ip和掩码，需要和服务器在同一网段上
 
-> route add default gw 192.168.0.1                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+route add default gw 192.168.0.1                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+```
 
 ### 五，挂在服务器文件到开发板的mnt目录下
 
-> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC020/01.software/board/Hi3559AV100_SDK_V2.0.2.0/ /mnt 
+```
+mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC020/01.software/board/Hi3559AV100_SDK_V2.0.2.0/ /mnt 
+
+mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/ /mnt
+```
 
 ### 六，运行MPP业务
 
-> 加载驱动：cd ./mpp/out/linux/multi-core/ko
->
-> ​                   ./load3559av100_multicore -i -sensor0 imx334 -i sensor1 imx334
->
-> 运行例程： cd ./mpp/sample/vio
->
-> ​	                ./sample_vio 0 0
+```
+加载驱动：cd ./mpp/out/linux/multi-core/ko
 
+            ./load3559av100_multicore -i -sensor0 imx334 -i sensor1 imx334
+```
+
+> 如果出现以下问题
+>
+> ```
+> /mnt/mpp/out/linux/multi-core/ko # ./load3559av100_multicore -i sensor0 imx334
+> -sh: ./load3559av100_multicore: Permission denied
+> ```
+>
+> 需要执行以下命令
+>
+> ```
+> cd /home/winston/Hi3559AV100/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/mp
+> p/out/linux/multi-core/ko
+> 
+> chmod a+x load3559av100_multicore
+> ```
+>
+> 加载驱动出现如下信息：
+>
+> ```shell
+> /mnt/mpp/out/linux/multi-core/ko # ./load3559av100_multicore -i sensor0 imx327 
+> sys_config: loading out-of-tree module taints kernel. 
+> Module himedia: init ok
+> ```
+>
+> ​	[insmod出现loading out-of-tree module taints kernel](https://blog.csdn.net/Guet_Kite/article/details/73175991)
+>
+> > rcS无可执行权限，`chmod u+x /etc/init.d/rcS`
+>
+
+
+
+#### 运行例程：cd ./mpp/sample/vio
+
+            ./sample_vio 0 0
+
+> 运行例程出现蓝屏的可能原因
+>
+> 1. 分辨率和帧率未能正确设置，需要与显示器的参数一致
+> 2. 尝试在sample目录下重新编译，先用`make linuxclean`清楚相关中间文件，再用`make linux`编译
+
+
+
+
+
+
+
+### 七，TFTP服务烧写方案
+
+#### 7.1 tftp服务安装与配置
+
+1. 安装tftp-server
+
+   ```
+   sudo apt-get install tftpd-hpa
+   sudo apt-get install tftp-hpa  （如果不需要客户端可以不安装）
+   ```
+
+2. 配置tftp服务器
+
+   ```
+   sudo vim /etc/default/tftpd-hpa
+   ```
+
+     将内容改为
+
+   ```
+   # /etc/default/tftpd-hpa
+   TFTP_USERNAME="tftp"
+   TFTP_DIRECTORY="/home/winston/tftpboot"   //创建的下载目录，需要设置执行权限
+   TFTP_ADDRESS="192.168.0.100:69"
+   TFTP_OPTIONS="-l -c -s"
+   ```
+
+3.  创建下载目录
+
+   ```
+   sudo mkdir /home/winston/tftpboot
+   ```
+
+4.  修改下载目录权限
+
+   ```
+   sudo chmod 777 -R /home/winston/tftpboot/
+   ```
+
+5.  重新启动tftp服务
+
+   ```
+   sudo /etc/init.d/tftpd-hpa restart
+   ```
+
+6.  测试tftp服务
+
+   在/tftpboot目录下新建一个test文本文件，输入一些内容，然后回到主目录，
+
+   ```
+   ～# tftp 192.168.0.100  （本地ip）
+   tftp > get test.txt 
+   tftp > q
+   cat test
+   ```
+
+   若显示test文本的内容则配置成功。
+
+#### 7.2 烧写流程（单Linux）
+
+- 配置tftp服务器，将发布包image_glibc_multi-core_arm64 目录下的相关文件拷贝到 tftp 服务器目录下。
+
+- 参数配置，上电后，敲任意键进入u-boot。设置以下参数;
+
+```
+setenv ipaddr 192.168.0.103                //单板ip
+setenv ethaddr FA:5A:E1:B1:89:75         //单板的MAC地址
+setenv netmask 255.255.255.0             
+setenv gatewayip 192.168.0.1             
+setenv serverip 192.168.0.100            //tftp服务器的ip
+ping 192.168.0.100                       //确保网络畅通。
+```
+
+- 烧写multi-core版本镜像文件到SPI NAND
+
+- 拨码选择主CPU：通过拨码开关SW1.4设置选择主CPU（Hi3559AV100 版本 A53UP 端仅支持 Huawei LiteOS）
+
+ 							0：从A53MP COore0启动
+
+​							 1：从A53UP启动
+
+- 烧写u-boot
+
+```
+mw.b 0x44000000 0xff 0x100000
+tftp 0x44000000 u-boot-hi3559av100.bin
+nand erase 0x0 0x100000
+nand write 0x44000000 0x0 0x100000
+```
+
+- 烧写内核
+
+```
+mw.b 0x44000000 0xff 0x900000
+tftp 0x44000000 uImage_hi3559av100_multi-core
+nand erase 0x100000 0x900000
+nand write 0x44000000 0x100000 0x900000
+```
+
+- 烧写文件系统
+
+```
+mw.b 0x44000000 0xff 0x1000000
+tftp 0x44000000 rootfs_hi3559av100_2k_24bit.yaffs2
+nand erase 0xA00000 0x1000000
+nand write.yaffs 0x44000000 0xA00000 0xbf5980 (0xbf5980 为 rootfs 文件实际大
+小)
+```
+
+- 设置启动参数
+
+```
+setenv bootargs 'mem=512M console=ttyAMA0,115200 root=/dev/mtdblock2 rw rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),16M(rootfs)'
+
+setenv bootcmd 'nand read 0x44000000 0x100000 0x900000;bootm 0x44000000'
+
+saveenv
+```
+
+- 重启系统
+
+```
+reset
+```
+
+
+
+
+
+### 八， SDK安装
+
+```
+rar x Hi3559AV100R001C02SPC010.part1.rar 
+```
+
+注意: 将生成的问价夹名字修改为 V100R001C02SPC010，即去掉前面的Hi3559A
+
+在 01.software/board/目录下连续解压，命令如下：
+
+```
+tar -zxf Hi3559AV100_SDK_V2.0.1.0.tgz 
+sudo ./sdk.unpack
+```
+
+编译SDK： *(该步骤可能要在安装交叉编译工具之后才能顺利进行)*
+
+进入/osdrv/opensource/kernel/目录，根据readme_cn.txt进行操作
+
+先进入 [www.kernel.org](http://www.kernel.org/) ，选择`https://www.kernel.org/pub/`选项 → `linux/` → `kernel/` → `v4.x/`
+
+按下`ctrl f`，搜索`linux-4.9.37.tar.gz`并下载
+
+下载包放于osdrv/opensource/kernel/中，在osdrv目录执行下列命令：
+
+```
+make atf
+```
+
+如果报错，很可能是第一步相关配置中库没装好，重新检查一遍
+
+继续，可在`osdrv/pub/`下生成u-boot、uimage和文件系统，选择24bit的文件系统：
+
+```
+make
+```
+
+编译mpp，进入到mpp/sample目录下，编译例程。
+
+```
+make linux
+```
 
