--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -6,8 +6,7 @@
 
 ?	3.对于镜像文件的制作，可以直接到osdrv下直接使用make命令编译，也可单独编译。例如到osdrv/pub/pc目录下去用	下面的命令来制作yaffs2格式的系统镜像（Hi3559AV100支持yaffs2格式的文件系统）
 
-?	*./mkyaffs2image100 <根文件系统所在地址> <生成镜像文件名> <Pagesize><ECC>*
-?	
+?	*./mkyaffs2image100 <根文件系统所在地址> <生成镜像文件名> <Pagesize><ECC>*	
 
 ?    4.另外我们可以直接利用NFS挂载文件来进行相应的开发。对于文件系统我们可以在挂载后直接由cp（复制命令）来添	加相关的文件。
 
@@ -47,7 +46,9 @@
 
 > *ifconfig eth0 hw ether FA:5A:E1:B1:89:75*           //设置开发板以太网物理地址
 > *ifconfig eth0 192.168.0.101 netmask 255.255.255.0*  //设置开发板ip和掩码，需要和烧写时的配置相同
-> *ifconfig add default gw 192.168.0.1*                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+> *route  add default gw 192.168.0.1*                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+>
+> ping 192.168.0.100                                       //检测是否配置成功，ping通
 
 ### 五，挂在服务器文件到开发板的mnt目录下
 
@@ -63,4 +64,5 @@
 >
 > ?                        ./sample_vio 0 0
 
-
+###七，使用telnet服务
+	再
