--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -1,73 +1,3 @@
-<<<<<<< HEAD
-### Ò»£¬ÉÕÐ´ÊÂÏî
-
-?	1.ÔÚ¿ª·¢°å²»´æÔÚubootµÄÊ±ºò£¬ÎÒÃÇÀûÓÃHitool¹¤¾ßÀ´ÉÕÐ´uboot£¬kernel£¬ÎÄ¼þÏµÍ³£»ÔÚ¿ª·¢°åÒÑ´æÔÚubootµÄÊ±ºòÎÒ	ÃÇ¿ÉÒÔ²ÉÓÃtftp·þÎñÀ´ÉÕÐ©Éý¼¶uboot£¬kernel£¬ÎÄ¼þÏµÍ³¡£
-
-?	2.ÔÚ¹Ù·½¸øµÄSDK°üÖÐÒÑÓÐÖÆ×÷ºÃµÄ¸ùÎÄ¼þÏµÍ³£¬¿ÉÖ±½Ó½«Æä¾µÏñÎÄ¼þÉÕÐ´µ½¿ª·¢°åÉÏ¡£Èç¹ûÒªÌí¼Ó×Ô¼ºµÄÓ¦ÓÃ³ÌÐò£¬	½«¿ÉÖ´ÐÐÎÄ¼þ£¬ÅäÖÃÎÄ¼þ£¬¿âÎÄ¼þµÈ¿½±´µ½ÏàÓ¦µÄÄ¿Â¼¼´¿É¡£
-
-?	3.¶ÔÓÚ¾µÏñÎÄ¼þµÄÖÆ×÷£¬¿ÉÒÔÖ±½Óµ½osdrvÏÂÖ±½ÓÊ¹ÓÃmakeÃüÁî±àÒë£¬Ò²¿Éµ¥¶À±àÒë¡£ÀýÈçµ½osdrv/pub/pcÄ¿Â¼ÏÂÈ¥ÓÃ	ÏÂÃæµÄÃüÁîÀ´ÖÆ×÷yaffs2¸ñÊ½µÄÏµÍ³¾µÏñ£¨Hi3559AV100Ö§³Öyaffs2¸ñÊ½µÄÎÄ¼þÏµÍ³£©
-
-?	*./mkyaffs2image100 <¸ùÎÄ¼þÏµÍ³ËùÔÚµØÖ·> <Éú³É¾µÏñÎÄ¼þÃû> <Pagesize><ECC>*	
-
-?    4.ÁíÍâÎÒÃÇ¿ÉÒÔÖ±½ÓÀûÓÃNFS¹ÒÔØÎÄ¼þÀ´½øÐÐÏàÓ¦µÄ¿ª·¢¡£¶ÔÓÚÎÄ¼þÏµÍ³ÎÒÃÇ¿ÉÒÔÔÚ¹ÒÔØºóÖ±½ÓÓÉcp£¨¸´ÖÆÃüÁî£©À´Ìí	¼ÓÏà¹ØµÄÎÄ¼þ¡£
-
-### ¶þ£¬Æô¶¯²ÎÊýÉèÖÃ
-
-?	1.µ¥linuxÏµÍ³£¨multi-core£©
-
-> setenv bootargs 'mem=512M console=ttyAMA0,115200 root=/dev/mtdblock2 rw rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),16M(rootfs)'
->
-> ×¢£ºmtdparts=hinand±íÊ¾ÎªNand Flash£¬mtdparts=hi_sfc±íÊ¾ÎªSPI NAND FLASH
->
-> *setenv bootcmd 'nand read 0x44000000 0x100000 0x900000;bootm 0x44000000'*
->
-> *saveenv*
->
-> ×¢ÊÍ£º<OSÄÚ´æ·ÖÅä><Éè±¸´®¿ÚºÅ£¬²¨ÌØÂÊ><µÚ¼¸¸ö·ÖÇø¿é><ÎÄ¼þÏµÍ³¸ñÊ½><dlashÀàÐÍ>
->
-> ×¢Òâ£ºÔÚÉèÖÃuboot£¬kernel£¬rooftsµÄ´óÐ¡Ê±Ó¦×¢ÒâºÍÉÕÐ´Ê±µÄÅäÖÃÒ»ÖÂ£¬ÕâÑù²ÅÄÜ³É¹¦Ìí¼Ó»·¾³±äÁ¿½øÈë²Ù×÷ÏµÍ³
->
-> 
-
-?	2.Ë«ÏµÍ³£¨big-little£©
-
-> setenv bootargs 'mem=512M console=ttyAMA0,115200 clk_ignore_unused rw root=/dev/mtdblock2 rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),32M(rootfs)';sa*
-> (1)²»Æô¶¯M7
-> *setenv bootcmd 'nand read 0x45000000 0x2A00000 0x1000000;go_a53up 0x45000000; nand read 0x52000000 0x100000 0x900000;bootm 0x52000000';sa*
-> (2)Æô¶¯M7
-> *setenv bootcmd 'nand read 0x45000000 0x2A00000 0x1000000;go_a53up 0x45000000; config_m7; nand read 0x52000000 0x3a00000 0x10000; cp.b 0x52000000 0x19000000 0x100000; go_m7; nand read 0x5200000 0x100000 0x900000;bootm 0x52000000';sa*
-
-### Èý£¬Ubuntu 16.04ÏµÍ³ÉÏNFSµÄ°²×°ÓëÊ¹ÓÃ
-
-[Ê¹ÓÃÖ¸ÄÏ]: https://blog.csdn.net/csdn_duomaomao/article/details/77822883
-
-### ËÄ£¬ÓÃNFS¹ÒÔÚÎÄ¼þÊ±ÍøÂçÍ¨ÐÅÉèÖÃ
-
-?	ÔÚLinuxÏÂµÄÖÕ¶ËÏÂÊäÈëÏÂÃæµÄÃüÁî
-
-> *ifconfig eth0 hw ether FA:5A:E1:B1:89:75*           //ÉèÖÃ¿ª·¢°åÒÔÌ«ÍøÎïÀíµØÖ·
-> *ifconfig eth0 192.168.0.101 netmask 255.255.255.0*  //ÉèÖÃ¿ª·¢°åipºÍÑÚÂë£¬ÐèÒªºÍÉÕÐ´Ê±µÄÅäÖÃÏàÍ¬
-> *route  add default gw 192.168.0.1*                //ÉèÖÃÍø¹Ø£¬ÓÃÓÚ·þÎñÆ÷ºÍ¿ª·¢°å´¦ÓÚ²»Í¬Íø¶ÎÊ±µÄÏà»¥Í¨ÐÅ
->
-> ping 192.168.0.100                                       //¼ì²âÊÇ·ñÅäÖÃ³É¹¦£¬pingÍ¨
-
-### Îå£¬¹ÒÔÚ·þÎñÆ÷ÎÄ¼þµ½¿ª·¢°åµÄmntÄ¿Â¼ÏÂ
-
-> mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768                       	192.168.0.117:/home/caizhi/Hi3559A/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/ /mnt*`
-
-### Áù£¬ÔËÐÐMPPÒµÎñ
-
-> ¼ÓÔØÇý¶¯£ºcd ./mpp/out/linux/multi-core/ko
->
-> ?	                   ./load3559av100_multicore -i -sensor0 imx334 -i sensor1 imx334
->
-> ÔËÐÐÀý³Ì£º cd ./mpp/sample/vio
->
-> ?                        ./sample_vio 0 0
-
-###Æß£¬Ê¹ÓÃtelnet·þÎñ
-	ÔÙ
-=======
 ### ä¸€ï¼Œçƒ§å†™äº‹é¡¹
 
 1.åœ¨å¼€å‘æ¿ä¸å­˜åœ¨ubootçš„æ—¶å€™ï¼Œæˆ‘ä»¬åˆ©ç”¨Hitoolå·¥å…·æ¥çƒ§å†™ubootï¼Œkernelï¼Œæ–‡ä»¶ç³»ç»Ÿï¼›åœ¨å¼€å‘æ¿å·²å­˜åœ¨ubootçš„æ—¶å€™æˆ‘ä»¬å¯ä»¥é‡‡ç”¨tftpæœåŠ¡æ¥çƒ§äº›å‡çº§ubootï¼Œkernelï¼Œæ–‡ä»¶ç³»ç»Ÿã€‚
@@ -87,7 +17,6 @@
 1.å•linuxç³»ç»Ÿï¼ˆmulti-coreï¼‰
 
 > ```
-> 
 > setenv bootargs 'mem=512M console=ttyAMA0,115200 root=/dev/mtdblock2 rw rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),16M(rootfs)'
 > 
 > æ³¨ï¼šmtdparts=hinandè¡¨ç¤ºä¸ºNand Flashï¼Œmtdparts=hi_sfcè¡¨ç¤ºä¸ºSPI NAND FLASH
@@ -116,14 +45,15 @@
 > 
 
 ### ä¸‰ï¼ŒUbuntu 16.04ç³»ç»Ÿä¸ŠNFSçš„å®‰è£…ä¸Žä½¿ç”¨
+
 å¯å‚è€ƒä»¥ä¸‹é“¾æŽ¥è¿›è¡ŒNFSçš„å®‰è£…ï¼š
 https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 1. èµ‹äºˆè¯»å†™æƒé™ï¼Œåˆ›å»º(éžå¿…é¡») /home/winston/Hi3559AV100 ç›®å½•
 
-  ```
+```
   chmod a+rw /home/winston/Hi3559AV100
-  ```
+```
 
   æ³¨æ„ï¼š è¯¥è·¯å¾„æ˜¯ç”¨æ¥æŒ‚è½½åˆ°å¼€å‘ç‰ˆä¸Šçš„ï¼Œå› æ­¤æŠŠéœ€è¦æŒ‚è½½çš„è·¯å¾„èµ‹äºˆè¯»å†™æƒé™å³å¯
 
@@ -131,26 +61,26 @@ https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 2. å®‰è£…nfsæœåŠ¡å™¨(æœåŠ¡å™¨è¢«å®¢æˆ·ç«¯è®¿é—®)
 
-  ```
+```
   sudo apt-get update
   sudo apt install nfs-kernel-server
-  ```
+```
 
   
 
 3. èµ‹äºˆæŒ‚è½½æƒé™ï¼Œæ‰“å¼€ /etc/exportsï¼ŒåŠ å…¥ä¸‹åˆ—å†…å®¹(å†…å®¹éœ€ä¿®æ”¹)
 
-  ```
+```
   /home/winston/Hi3559AV100 *(rw,sync,no_subtree_check,no_root_squash) æˆ–
   /home/winston/Hi3559AV100 *(rw,syncï¼Œno_root_squash)
   *è¡¨ç¤ºä»»ä½•IPéƒ½å¯ä»¥è®¿é—®ï¼Œrwæ˜¯è¯»å†™æƒé™ï¼Œsyncæ˜¯åŒæ­¥æƒé™ï¼Œno_subtree_checkè¡¨ç¤ºä¸ç”¨ç®¡çˆ¶ç›®å½•æ˜¯å¦æœ‰æƒé™ï¼Œno_root_squashè¡¨ç¤ºä¸ç”¨
-  ```
+```
 
 4. é‡å¯NFSæœåŠ¡
 
-  ```
+```
   sudo /etc/init.d/nfs-kernel-server restart
-  ```
+```
 
 ### å››ï¼Œç”¨NFSæŒ‚åœ¨æ–‡ä»¶æ—¶ç½‘ç»œé€šä¿¡è®¾ç½®
 
@@ -207,13 +137,14 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 > â€‹	[insmodå‡ºçŽ°loading out-of-tree module taints kernel](https://blog.csdn.net/Guet_Kite/article/details/73175991)
 >
 > > rcSæ— å¯æ‰§è¡Œæƒé™ï¼Œ`chmod u+x /etc/init.d/rcS`
->
 
 
 
 #### è¿è¡Œä¾‹ç¨‹ï¼šcd ./mpp/sample/vio
 
-            ./sample_vio 0 0
+```
+        ./sample_vio 0 0
+```
 
 > è¿è¡Œä¾‹ç¨‹å‡ºçŽ°è“å±çš„å¯èƒ½åŽŸå› 
 >
@@ -253,25 +184,25 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
    TFTP_OPTIONS="-l -c -s"
    ```
 
-3.  åˆ›å»ºä¸‹è½½ç›®å½•
+3. åˆ›å»ºä¸‹è½½ç›®å½•
 
    ```
    sudo mkdir /home/winston/tftpboot
    ```
 
-4.  ä¿®æ”¹ä¸‹è½½ç›®å½•æƒé™
+4. ä¿®æ”¹ä¸‹è½½ç›®å½•æƒé™
 
    ```
    sudo chmod 777 -R /home/winston/tftpboot/
    ```
 
-5.  é‡æ–°å¯åŠ¨tftpæœåŠ¡
+5. é‡æ–°å¯åŠ¨tftpæœåŠ¡
 
    ```
    sudo /etc/init.d/tftpd-hpa restart
    ```
 
-6.  æµ‹è¯•tftpæœåŠ¡
+6. æµ‹è¯•tftpæœåŠ¡
 
    åœ¨/tftpbootç›®å½•ä¸‹æ–°å»ºä¸€ä¸ªtestæ–‡æœ¬æ–‡ä»¶ï¼Œè¾“å…¥ä¸€äº›å†…å®¹ï¼Œç„¶åŽå›žåˆ°ä¸»ç›®å½•ï¼Œ
 
@@ -287,7 +218,6 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 #### 7.2 çƒ§å†™æµç¨‹ï¼ˆå•Linuxï¼‰
 
 - é…ç½®tftpæœåŠ¡å™¨ï¼Œå°†å‘å¸ƒåŒ…image_glibc_multi-core_arm64 ç›®å½•ä¸‹çš„ç›¸å…³æ–‡ä»¶æ‹·è´åˆ° tftp æœåŠ¡å™¨ç›®å½•ä¸‹ã€‚
-
 - å‚æ•°é…ç½®ï¼Œä¸Šç”µåŽï¼Œæ•²ä»»æ„é”®è¿›å…¥u-bootã€‚è®¾ç½®ä»¥ä¸‹å‚æ•°;
 
 ```
@@ -300,7 +230,6 @@ ping 192.168.0.100                       //ç¡®ä¿ç½‘ç»œç•…é€šã€‚
 ```
 
 - çƒ§å†™multi-coreç‰ˆæœ¬é•œåƒæ–‡ä»¶åˆ°SPI NAND
-
 - æ‹¨ç é€‰æ‹©ä¸»CPUï¼šé€šè¿‡æ‹¨ç å¼€å…³SW1.4è®¾ç½®é€‰æ‹©ä¸»CPUï¼ˆHi3559AV100 ç‰ˆæœ¬ A53UP ç«¯ä»…æ”¯æŒ Huawei LiteOSï¼‰
 
  							0ï¼šä»ŽA53MP COore0å¯åŠ¨
@@ -392,10 +321,6 @@ make atf
 make
 ```
 
-ç¼–è¯‘mppï¼Œè¿›å…¥åˆ°mpp/sampleç›®å½•ä¸‹ï¼Œç¼–è¯‘ä¾‹ç¨‹ã€‚
+ç¼–è¯‘mppï¼Œè¿›å…¥åˆ°mpp/sampleç›®å½•ä¸‹ï¼Œç¼–è¯‘ä¾‹ç¨‹
+```make linux
 
-```
-make linux
-```
-
->>>>>>> 3a035c73d92e1e57a20e573a2fc4c2283a5db136
