--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -87,11 +87,12 @@ https://blog.csdn.net/boling_cavalry/article/details/79498346
 在Linux下的终端下输入下面的命令
 
 ```
-ifconfig eth0 hw ether FA:5A:E1:B1:89:75          //设置开发板以太网物理地址
-
-ifconfig eth0 192.168.0.103 netmask 255.255.255.0  //设置开发板ip和掩码，需要和服务器在同一网段上
-
-route add default gw 192.168.0.1                //设置网关，用于服务器和开发板处于不同网段时的相互通信
+//设置开发板以太网物理地址
+ifconfig eth0 hw ether FA:5A:E1:B1:89:75          
+//设置开发板ip和掩码，需要和服务器在同一网段上
+ifconfig eth0 192.168.0.103 netmask 255.255.255.0 
+//设置网关，用于服务器和开发板处于不同网段时的相互通信
+route add default gw 192.168.0.1                
 ```
 
 ### 五，挂在服务器文件到开发板的mnt目录下
