--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -17,7 +17,6 @@
 1.单linux系统（multi-core）
 
 > ```
-> 
 > setenv bootargs 'mem=512M console=ttyAMA0,115200 root=/dev/mtdblock2 rw rootfstype=yaffs2 mtdparts=hinand:1M(boot),9M(kernel),16M(rootfs)'
 > 
 > 注：mtdparts=hinand表示为Nand Flash，mtdparts=hi_sfc表示为SPI NAND FLASH
@@ -46,14 +45,15 @@
 > 
 
 ### 三，Ubuntu 16.04系统上NFS的安装与使用
+
 可参考以下链接进行NFS的安装：
 https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 1. 赋予读写权限，创建(非必须) /home/winston/Hi3559AV100 目录
 
-  ```
+```
   chmod a+rw /home/winston/Hi3559AV100
-  ```
+```
 
   注意： 该路径是用来挂载到开发版上的，因此把需要挂载的路径赋予读写权限即可
 
@@ -61,26 +61,26 @@ https://blog.csdn.net/boling_cavalry/article/details/79498346
 
 2. 安装nfs服务器(服务器被客户端访问)
 
-  ```
+```
   sudo apt-get update
   sudo apt install nfs-kernel-server
-  ```
+```
 
   
 
 3. 赋予挂载权限，打开 /etc/exports，加入下列内容(内容需修改)
 
-  ```
+```
   /home/winston/Hi3559AV100 *(rw,sync,no_subtree_check,no_root_squash) 或
   /home/winston/Hi3559AV100 *(rw,sync，no_root_squash)
   *表示任何IP都可以访问，rw是读写权限，sync是同步权限，no_subtree_check表示不用管父目录是否有权限，no_root_squash表示不用
-  ```
+```
 
 4. 重启NFS服务
 
-  ```
+```
   sudo /etc/init.d/nfs-kernel-server restart
-  ```
+```
 
 ### 四，用NFS挂在文件时网络通信设置
 
@@ -138,13 +138,14 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 > ​	[insmod出现loading out-of-tree module taints kernel](https://blog.csdn.net/Guet_Kite/article/details/73175991)
 >
 > > rcS无可执行权限，`chmod u+x /etc/init.d/rcS`
->
 
 
 
 #### 运行例程：cd ./mpp/sample/vio
 
-            ./sample_vio 0 0
+```
+        ./sample_vio 0 0
+```
 
 > 运行例程出现蓝屏的可能原因
 >
@@ -184,25 +185,25 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
    TFTP_OPTIONS="-l -c -s"
    ```
 
-3.  创建下载目录
+3. 创建下载目录
 
    ```
    sudo mkdir /home/winston/tftpboot
    ```
 
-4.  修改下载目录权限
+4. 修改下载目录权限
 
    ```
    sudo chmod 777 -R /home/winston/tftpboot/
    ```
 
-5.  重新启动tftp服务
+5. 重新启动tftp服务
 
    ```
    sudo /etc/init.d/tftpd-hpa restart
    ```
 
-6.  测试tftp服务
+6. 测试tftp服务
 
    在/tftpboot目录下新建一个test文本文件，输入一些内容，然后回到主目录，
 
@@ -218,7 +219,6 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 #### 7.2 烧写流程（单Linux）
 
 - 配置tftp服务器，将发布包image_glibc_multi-core_arm64 目录下的相关文件拷贝到 tftp 服务器目录下。
-
 - 参数配置，上电后，敲任意键进入u-boot。设置以下参数;
 
 ```
@@ -231,7 +231,6 @@ ping 192.168.0.100                       //确保网络畅通。
 ```
 
 - 烧写multi-core版本镜像文件到SPI NAND
-
 - 拨码选择主CPU：通过拨码开关SW1.4设置选择主CPU（Hi3559AV100 版本 A53UP 端仅支持 Huawei LiteOS）
 
  							0：从A53MP COore0启动
@@ -323,9 +322,7 @@ make atf
 make
 ```
 
-编译mpp，进入到mpp/sample目录下，编译例程。
-
+编译mpp，进入到mpp/sample目录下，编译例程
 ```
 make linux
 ```
-
