sdk.unpack failed

--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -298,6 +298,15 @@ rar x Hi3559AV100R001C02SPC010.part1.rar
 ```
 tar -zxf Hi3559AV100_SDK_V2.0.1.0.tgz 
 sudo ./sdk.unpack
+解包时出现错误：
+/sdk.unpack: 2: source: not found
+./sdk.unpack: 4: ECHO: not found
+./sdk.unpack: 6: WARN: not found
+./sdk.unpack: 7: WARN: not found
+./sdk.unpack: 8: ECHO: not found
+
+这是由于脚本是基于bash的，而用的linux可能是dash或其他的，利用如下命令即可解压：
+bash ./sdk.unpack
 ```
 
 编译SDK： *(该步骤可能要在安装交叉编译工具之后才能顺利进行)*
