软件安装配置

--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -287,6 +287,21 @@ reset
 
 ### 八， SDK安装
 
+**软件包安装**
+
+- 配置默认使用 bash 
+  执行 `sudo dpkg-reconfigure dash `选择 no
+
+- 安装软件包，执行
+
+  ```shell
+  sudo apt-get install make libc6:i386 lib32z1 lib32stdc++6 zlib1g-dev libncurses5-dev ncurses-term libncursesw5-dev g++ u-boot-tools:i386 texinfo texlive gawk libssl-dev openssl bc 
+  ```
+
+- 创建/etc/ld.so.preload 文件，并执行 `echo "" > /etc/ld.so.preload`，以解决 64bit linux server 上某些第三方库编译失败的问题。
+
+**安装SDK**
+
 ```
 rar x Hi3559AV100R001C02SPC010.part1.rar 
 ```
@@ -306,10 +321,35 @@ sudo ./sdk.unpack
 ./sdk.unpack: 8: ECHO: not found
 
 这是由于脚本是基于bash的，而用的linux可能是dash或其他的，利用如下命令即可解压：
-bash ./sdk.unpack
+bash ./sdk.unpack（未执行默认配置bash这一步）
 ```
 
-编译SDK： *(该步骤可能要在安装交叉编译工具之后才能顺利进行)*
+**安装交叉编译器**
+
+进入到相关编译器目录，执行以下命令
+
+```shell
+//安装aarch64交叉编译器
+tar –xzf aarch64-himix100-linux.tgz
+sudo chmod +x aarch64-himix100-linux.install
+source ./aarch64-himix100-linux.install
+
+
+//安装arm-none-eabi
+tar –xzf gcc-arm-none-eabi-4_9-2015q3.tgz
+进入https://launchpad.net/gcc-arm-embedded/4.9/4.9-2015-q3-update
+下载gcc-arm-none-eabi-4_9-2015q3-20150921-linux.tar.bz2
+1）将下载的 gcc-arm-none-eabi-4_9-2015q3-20150921-linux.tar.bz2和发布包里的
+gcc-arm-none-eabi-4_9-2015q3.install放到同一个目录下
+2)执行如下命令：
+   chmod +x gcc-arm-none-eabi-4_9-2015q3.install
+   ./gcc-arm-none-eabi-4_9-2015q3.install
+ 执行 source /etc/profile 配置环境变量生效
+```
+
+
+
+**编译SDK**： *(该步骤可能要在安装交叉编译工具之后才能顺利进行)*
 
 进入/osdrv/opensource/kernel/目录，根据readme_cn.txt进行操作
 
@@ -317,7 +357,22 @@ bash ./sdk.unpack
 
 按下`ctrl f`，搜索`linux-4.9.37.tar.gz`并下载
 
-下载包放于osdrv/opensource/kernel/中，在osdrv目录执行下列命令：
+下载包放于`osdrv/opensource/kernel/`中，
+
+2)在linux服务器中进入 `osdrv `的根目录,执行如下命令：
+
+```shell
+	cd opensource/kernel
+	tar -zxf linux-4.9.37.tar.gz
+	mv linux-4.9.37 linux-4.9.y
+	cd linux-4.9.y
+	patch -p1 < ../linux-4.9.37.patch
+	cd ../
+	tar -czf linux-4.9.y.tgz linux-4.9.y
+	cd ../../
+```
+
+或者在osdrv目录执行下列命令：
 
 ```
 make atf
