--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -98,9 +98,9 @@ route add default gw 192.168.0.1
 ### 五，挂在服务器文件到开发板的mnt目录下
 
 ```
-mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC020/01.software/board/Hi3559AV100_SDK_V2.0.2.0/ /mnt 
+mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/SDK020/Test/V100R001C02SPC020/01.software/board/Hi3559AV100_SDK_V2.0.2.0/ /mnt 
 
-mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/ /mnt
+mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/winston/Hi3559AV100/SDK020/Test/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/ /mnt
 ```
 
 ### 六，运行MPP业务
@@ -121,23 +121,22 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 > 需要执行以下命令
 >
 > ```
-> cd /home/winston/Hi3559AV100/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/mp
-> p/out/linux/multi-core/ko
+> cd /home/winston/Hi3559AV100/V100R001C02SPC010/01.software/board/Hi3559AV100_SDK_V2.0.1.0/mpp/out/linux/multi-core/ko
 > 
 > chmod a+x load3559av100_multicore
 > ```
->
-> 加载驱动出现如下信息：
->
-> ```shell
+> 
+>加载驱动出现如下信息：
+> 
+>```shell
 > /mnt/mpp/out/linux/multi-core/ko # ./load3559av100_multicore -i sensor0 imx327 
 > sys_config: loading out-of-tree module taints kernel. 
 > Module himedia: init ok
 > ```
->
-> ​	[insmod出现loading out-of-tree module taints kernel](https://blog.csdn.net/Guet_Kite/article/details/73175991)
->
-> > rcS无可执行权限，`chmod u+x /etc/init.d/rcS`
+> 
+>​	[insmod出现loading out-of-tree module taints kernel](https://blog.csdn.net/Guet_Kite/article/details/73175991)
+> 
+>> rcS无可执行权限，`chmod u+x /etc/init.d/rcS`
 
 
 
@@ -216,14 +215,18 @@ mount -t nfs -o nolock -o tcp -o rsize=32768,wsize=32768 192.168.0.100:/home/win
 
    若显示test文本的内容则配置成功。
 
+7. 未正确烧写文件，应该将防火墙先关闭
+
+   [用tftp服务器烧录内核和文件系统时”Retry cout exceeded; starting again “解决方法](https://blog.csdn.net/kbwzy/article/details/45645393)
+
 #### 7.2 烧写流程（单Linux）
 
 - 配置tftp服务器，将发布包image_glibc_multi-core_arm64 目录下的相关文件拷贝到 tftp 服务器目录下。
 - 参数配置，上电后，敲任意键进入u-boot。设置以下参数;
 
 ```
-setenv ipaddr 192.168.0.103                //单板ip
-setenv ethaddr FA:5A:E1:B1:89:75         //单板的MAC地址
+setenv ipaddr 192.168.0.103                //单板ip  
+setenv ethaddr FA:5A:E1:B1:89:75         //单板的MAC地址  
 setenv netmask 255.255.255.0             
 setenv gatewayip 192.168.0.1             
 setenv serverip 192.168.0.100            //tftp服务器的ip
