烧写地址修改错误

--- a/doc/17所目标板海思部分测试.md
+++ b/doc/17所目标板海思部分测试.md
@@ -218,7 +218,7 @@ mw.b 0x41000000 0xff 0x900000 					/* 对内存初始化*/
 tftp 0x41000000 uImage_hi3559av100_multi-core	/*uImage下载到内存*/ 
 sf probe 0 										/*探测并初始化SPI flash*/ 
 sf erase 0x100000 0x900000 						/*擦除 9M大小*/ 
-sf write 0x410000 0x100000 0x400000 	/*从内存写入SPI NOR Flash，0x1000000偏移地址*/ 
+sf write 0x41000000 0x100000 0x400000 	/*从内存写入SPI NOR Flash，0x1000000偏移地址*/ 
 ```
 
 
@@ -277,7 +277,7 @@ setenv bootargs 'mem=128M console=ttyAMA0,115200 root=/dev/mtdblock2 rootfstype=
 SPI Nand设置的命令：
 setenv bootcmd 'nand read 0x44000000 0x100000 0x900000;bootm 0x44000000'
 SPI Nor设置的命令：
-setenv bootcmd 'sf probe 0;sf read 0x41000000 100000 900000;bootm 0x41000000'
+setenv bootcmd 'sf probe 0;sf read 0x41000000 0x100000 0x900000;bootm 0x41000000'
 ```
 
 #### 3. 调试过程记录
@@ -381,7 +381,7 @@ Linux version 4.9.37 (winston@winston) (gcc version 6.3.0 (HC&C V100R002C00B012_
 `tftp`烧写指令：
 
 ```shell
-mw.b 0x41000000 0xff 0xf00000 					/* 对内存初始化*/ 
+mw.b 0x41000000 0xff 0x1000000 					/* 对内存初始化*/ 
 tftp 0x41000000 rootfs_hi3559av100_64k.jffs2 	/*文件系统下载到内存*/ 
 sf probe 0 										/*探测并初始化SPI flash*/ 
 sf erase 0xa00000 0x1000000 						/*擦除 16M大小*/ 
@@ -609,18 +609,16 @@ Memory Limit: 64 MB
    setenv bootargs 'mem=128M console=ttyAMA0,115200 root=/dev/mtdblock2 rootfstype=jffs2 rw mtdparts=hi_sfc:1M(boot),9M(kernel),16M(rootfs)' 
 saveenv 
    
-//设置bootcmd
-   setenv bootcmd 'sf probe 0;sf read 0x41000000 100000 900000;bootm 0x41000000'
-   saveenv
-   
+   //设置bootcmd
+      setenv bootcmd 'sf probe 0;sf read 0x41000000 100000 900000;bootm 0x41000000'
+      saveenv
    ```
-   
-   解决以上问题，成功进入文件系统。
-   
+
+  解决以上问题，成功进入文件系统
 
 >**注意**
 >
->在设置环境变量的时候将`mem`设为`64M`最初出现以下问题：
+>在设置环境变量的时候将`mem`设为`64M`最初出现以下问题：虽然成功进入了文件系统，但是查看打印信息，发现是内存不够导致挂载设备时失败。
 >
 >```shell
 >[RCS]: /etc/init.d/S00devs
@@ -720,12 +718,11 @@ saveenv
 >[ 1373]     0  1373      831       11       5       3        0             0 sh       
 >Out of memory: Kill process 1373 (sh) score 1 or sacrifice child                     
 >Killed process 1373 (sh) total-vm:3324kB, anon-rss:44kB, file-rss:0kB, shmem-rss:0kB
->Auto login as root ...                                                               login[1374]: root login on 'ttyS000'                                                 
+>Auto login as root ...                                                               
+>login[1374]: root login on 'ttyS000'                                                 
 >Welcome to HiLinux.                                                                   
 >None of nfsroot found in cmdline. 
 >```
->
->虽然成功进入了文件系统，但是查看答应信息，发现时内存不够导致挂载设备时失败。
 >
 >利用`free`和`top`命令查看剩余内存和进程信息
 >
@@ -765,12 +762,12 @@ saveenv
 >11      2 root     SW       0  0.0   0  0.0 [watchdog/0] 
 >~ # free                                                                                                                                      
 >        total       used       free     shared    buffers     cached
->Mem:        103516      21768      81748          4          0       1340
+>mem:        103516      21768      81748          4          0       1340
 >-/+ buffers/cache:      20428      83088
->Swap:            0          0          0   
+>Swap:            0          0          0  
 >```
 >
->并没有发现内存不够，可能是在启动的过程中会开启其余的进程使得内存不够，将环境变量中的`mem`设置为128M之后能成功启动并没有打印错误信息。
+>并没有发现内存不够，可能是在启动的过程中会开启其余的进程使得内存不够，将环境变量中的`mem`设置为`128M`之后能成功启动并没有打印错误信息。
 
 ### 四 网口测试
 
@@ -778,7 +775,48 @@ saveenv
 
 **解决办法**
 
-海思以太网phy时钟源有两种，一种由海思内部pll输出25MHz，一种由板载晶振提供时钟。现在测试板1发现海思输出给phy的25MHz时钟没有给到phy芯片，怀疑是排阻虚焊，现将海思phy时钟源更换为板载晶振，以太网测试没问题。
+海思以太网`phy`时钟源有两种，一种由海思内部`pll`输出`25MHz`，一种由板载晶振提供时钟。现在测试板1发现海思输出给`phy`的`25MHz`时钟没有给到`phy`芯片，怀疑是排阻虚焊，现将海思`phy`时钟源更换为板载晶振，以太网测试没问题。可以用`nfs`挂载文件目录，也可以用`tftp`烧写
 
+### 五  SD卡和`eMMC`测试
 
+### 1 操作准备
 
+- U-boot 和 Linux内核使用SDK发布的U-boot和kernel
+- 文件系统，SPI Nand Flash 用yaffs2格式，SPI Nor Flash用jffs2格式，eMMC 用ext4格式
+
+#### 2 操作过程
+
+- 步骤一 ：启动单板，加载文件系统
+- 步骤二： 加载内核，默认SD/eMMC相关模块已经编入内核。
+- 步骤三： 插入SD/eMMC卡，就可以进行相关操作，通过SDIO接口实现读写。
+
+总体流程如下图所示：
+
+```flow
+st=>start: 插入SD卡
+cond1=>condition: 是否已分区？
+op1=>operation: 分区
+cond2=>condition: 是否已格式化?
+op2=>operation: 格式化
+op3=>operation: 挂载目录
+e=>end: 读写文件
+
+st->cond1
+cond1(yes)->cond2
+cond2(yes)->op3->e
+cond2(no)->op2->op3->e
+cond1(no)->op1->cond2
+cond2(yes)->op3->e
+cond2(no)->op2->op3->e
+​```
+```
+
+- 步骤四：查看分区信息
+
+  若没有显示出p1，表示还没有分区，见如下步骤进行分区
+
+  若显示出p1，则SD/eMMC已经检测到，并已经分区
+
+  >
+  >
+  >
