--- a/doc/Hi3559av100系统配置.md
+++ b/doc/Hi3559av100系统配置.md
@@ -152,6 +152,82 @@ ifconfig eth0 192.168.0.103 netmask 255.255.255.0
 route add default gw 192.168.0.1            
 ```
 
+**后续将设置网络通信和挂载的流程写到了自启动文件中，会自动挂载，然后取消了路由器，通过网线直连的方式**
+
+**通过网线直连需要设置以太网的ip地址**
+
+- 首先输入`ifconfig`查看`ip`信息
+
+  ```shell
+  eno1      Link encap:Ethernet  HWaddr e4:54:e8:9e:50:1d  
+            UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+            RX packets:7431 errors:2 dropped:0 overruns:0 frame:1
+            TX packets:24068 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:729966 (729.9 KB)  TX bytes:32788851 (32.7 MB)
+            Interrupt:16 Memory:9dc80000-9dca0000 
+  
+  lo        Link encap:Local Loopback  
+            inet addr:127.0.0.1  Mask:255.0.0.0
+            inet6 addr: ::1/128 Scope:Host
+            UP LOOPBACK RUNNING  MTU:65536  Metric:1
+            RX packets:4778 errors:0 dropped:0 overruns:0 frame:0
+            TX packets:4778 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:388986 (388.9 KB)  TX bytes:388986 (388.9 KB)
+  
+  wlxe84e06600d75 Link encap:Ethernet  HWaddr e8:4e:06:60:0d:75  
+            inet addr:192.168.1.116  Bcast:192.168.1.255  Mask:255.255.255.0
+            inet6 addr: fe80::735b:6c79:b484:6af8/64 Scope:Link
+            UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+            RX packets:113884 errors:0 dropped:0 overruns:0 frame:0
+            TX packets:16285 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:17147832 (17.1 MB)  TX bytes:3632219 (3.6 MB)
+  ```
+
+  
+
+- 以上的eno1为有线网ip，添加ip地址
+
+  ```shell
+  ifconfig eno1 192.168.0.100
+  ```
+
+- 通过`ifconfig`查看ip信息
+
+  ```shell
+  eno1      Link encap:Ethernet  HWaddr e4:54:e8:9e:50:1d  
+            inet addr:192.168.0.103  Bcast:192.168.0.255  Mask:255.255.255.0
+            UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+            RX packets:7431 errors:2 dropped:0 overruns:0 frame:1
+            TX packets:24092 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:729966 (729.9 KB)  TX bytes:32792707 (32.7 MB)
+            Interrupt:16 Memory:9dc80000-9dca0000 
+  
+  lo        Link encap:Local Loopback  
+            inet addr:127.0.0.1  Mask:255.0.0.0
+            inet6 addr: ::1/128 Scope:Host
+            UP LOOPBACK RUNNING  MTU:65536  Metric:1
+            RX packets:4807 errors:0 dropped:0 overruns:0 frame:0
+            TX packets:4807 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:391155 (391.1 KB)  TX bytes:391155 (391.1 KB)
+  
+  wlxe84e06600d75 Link encap:Ethernet  HWaddr e8:4e:06:60:0d:75  
+            inet addr:192.168.1.116  Bcast:192.168.1.255  Mask:255.255.255.0
+            inet6 addr: fe80::735b:6c79:b484:6af8/64 Scope:Link
+            UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
+            RX packets:115130 errors:0 dropped:0 overruns:0 frame:0
+            TX packets:16361 errors:0 dropped:0 overruns:0 carrier:0
+            collisions:0 txqueuelen:1000 
+            RX bytes:17275326 (17.2 MB)  TX bytes:3654428 (3.6 MB)
+  
+  ```
+
+  
+
 ### 五，串口调试工具使用
 
 **minicom 的使用**
@@ -314,6 +390,8 @@ mount: mounting 192.168.0.100:/home/winston/Hi3559AV100/SDK020/Test/V100R001C02S
 7. 未正确烧写文件，应该将防火墙先关闭，在`root`权限下输入`ufw disable`关闭防火墙
 
    [用tftp服务器烧录内核和文件系统时”Retry cout exceeded; starting again “解决方法](https://blog.csdn.net/kbwzy/article/details/45645393)
+   
+8. 如果烧写的时候一直等待状态，尝试输入`sudo /etc/init.d/tftpd-hpa restart`重启tftp服务。
 
 #### 8.2 烧写流程（单Linux）
 
@@ -326,6 +404,7 @@ setenv ethaddr FA:5A:E1:B1:89:75         //单板的MAC地址
 setenv netmask 255.255.255.0             
 setenv gatewayip 192.168.0.1             
 setenv serverip 192.168.0.100            //tftp服务器的ip
+saveenv
 ping 192.168.0.100                       //确保网络畅通。
 ```
 
@@ -424,13 +503,13 @@ SPI Nor Flash 烧写时必须先对内存初始化，利用`sf probe`可进行`S
   tftp 0x41000000 uImage_hi3559av100_multi-core	/*uImage下载到内存*/ 
   sf probe 0 										/*探测并初始化SPI flash*/ 
   sf erase 0x100000 0x900000 						/*擦除 9M大小*/ 
-  sf write 0x410000 0x100000 0x400000 	/*从内存写入SPI NOR Flash，0x1000000偏移地址*/ 
+  sf write 0x41000000 0x100000 0x900000 	/*从内存写入SPI NOR Flash，0x1000000偏移地址*/ 
   ```
 
 - 烧写roofts
 
   ```shell
-  mw.b 0x41000000 0xff 0xf00000 					/* 对内存初始化*/ 
+  mw.b 0x41000000 0xff 0x1000000 					/* 对内存初始化*/ 
   tftp 0x41000000 rootfs_hi3559av100_64k.jffs2 	/*文件系统下载到内存*/ 
   sf probe 0 										/*探测并初始化SPI flash*/ 
   sf erase 0xa00000 0x1000000 						/*擦除 16M大小*/ 
@@ -445,7 +524,7 @@ SPI Nor Flash 烧写时必须先对内存初始化，利用`sf probe`可进行`S
   saveenv 
   
   //设置bootcmd
-  setenv bootcmd 'sf probe 0;sf read 0x41000000 100000 900000;bootm 0x41000000'
+  setenv bootcmd 'sf probe 0;sf read 0x41000000 0x100000 0x900000;bootm 0x41000000'
   saveenv
   ```
   
